# PacSnake

./: .gitignore  Body.h  CMakeLists.txt  Fruit.h  GameEngine.cpp  GameEngine.cpp.autosave  GameEngine.h  GameEngineSimulation.cpp  GameEngineSimulation.h  GameMap.cpp  GameMap.h  GameMapSimulation.cpp  GameMapSimulation.h  Ghost.h  Makefile  OtherThought.md  OtherThoughts.md  PacSnake.pro  PowerUp.h  README.md  Snake.cpp  Snake.h  SnakeBody.h  TODO.md  WARNING.md  achivement.md  assets.qrc  credits.ui.autosave  credits_container.cpp  credits_container.h  credits_container.ui  credits_view.cpp  credits_view.h  credits_view.ui  game_view.cpp  game_view.cpp.autosave  game_view.h  game_view.ui  main.cpp  main_container.cpp  (+11 more)
GameMap/: GameMap.txt
achievements/: Achievement.cpp  Achievement.h  Stats.cpp  Stats.h  achievements_container.cpp  achievements_container.h  achievements_container.ui  base_achievement.cpp
archive/: GameEngine.cpp  GameEngine.h  GameEngineSimulation.cpp
assets/: background.psd  big-ghost-base.psd  ghost-base.psd  snake-body.psd  snake-corner.psd  snake-head-left.psd  snake-head-right.psd  snake-head.psd  snake-tail.psd
assets/sound/: death.sfs  no_power_up.sfs  powerup_deactivate.sfs  select.sfs
assets/sprite/: apple.psd  dash.psd  grape.psd  heal.psd  pear.psd  shield.psd  snake-body-horizontal.psd  snake-body-vertical.psd  snake-corner-down-left.psd  snake-corner-down-right.psd  snake-corner-up-left.psd  snake-corner-up-right.psd  snake-head-down.psd  snake-head-left.psd  snake-head-right.psd  snake-head-up.psd  snake-tail-down.psd  snake-tail-left.psd  snake-tail-right.psd  snake-tail-up.psd  strawberry.psd  tangerine.psd
credits/: credits_container.cpp  credits_container.h  credits_container.ui  credits_view.cpp  credits_view.h  credits_view.ui  credits_view.ui.autosave
docs/: Notes to group.md  OtherThoughts.md  TODO.md  achivement.md  credits.md
entities/: EntitiesBody.h  Entity.cpp  Entity.h  Ghost.h  MovingEntity.cpp  MovingEntity.h  Snake.h  SnakeBody.h
entities/fruits_and_powerUps/: Fruit.cpp  Fruit.h  HealItem.cpp  HealItem.h  PU_Dash.cpp  PU_Dash.h  PU_Heal.cpp  PU_Heal.h  PU_Shield.cpp  PU_Shield.h  PowerUp.cpp  PowerUp.h  PuShield.cpp  PuShield.h
entities/ghosts/: BigGhost.cpp  BigGhost.h  GhostBody.cpp  GhostBody.h  NormalGhost.cpp  NormalGhost.h
entities/snake/: Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h
fruits_and_powerUps/: Fruit.h  PowerUp.h
game_map/: GameMap2.txt
merge_folder/: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
merge_folder/src/: GameEngine.cpp  GameMap.cpp  GameMap.h
merge_folder/src/entities/: Entity.cpp  Entity.h  MovingEntity.cpp  MovingEntity.h
merge_folder/src/entities/fruits_and_powerUps/: Fruit.h  PU_Dash.cpp  PU_Dash.h  PowerUp.cpp  PowerUp.h  PuShield.cpp  PuShield.h
merge_folder/src/entities/ghosts/: GhostBody.cpp  NormalGhost.cpp  NormalGhost.h
merge_folder/src/entities/snake/: Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h
src/: GameEngine.h  Makefile
src/entities/: Entity.cpp  Entity.h  MovingEntity.cpp  MovingEntity.h
src/entities/fruits_and_powerUps/: Fruit.h  PU_Dash.cpp  PU_Dash.h  PowerUp.cpp  PowerUp.h
src/entities/ghosts/: Ghost.h  NormalGhost.h
src/entities/snake/: Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h
void void void/: .gitignore  GameMap.cpp  GameMap.h  PacSnake.pro  README.md  assets.qrc  game_view.cpp  game_view.h  game_view.ui  main.cpp  main_container.cpp  main_container.h  main_container.ui  main_container_old.ui
void void void/achievements/: Achievement.cpp  Achievement.h  achievements_container.cpp  achievements_container.h  achievements_container.ui
void void void/archive/: GameEngine.cpp  GameEngineSimulation.h  GameMapSimulation.cpp
void void void/assets/: background-2.psd
void void void/assets/sound/: eat.sfs  hurt.sfs  powerup.sfs
void void void/credits/: credits_container.cpp  credits_container.h  credits_container.ui  credits_view.cpp
void void void/entities/: Entity.cpp  Entity.h  MovingEntity.cpp  MovingEntity.h
void void void/entities/fruits_and_powerUps/: Fruit.cpp  Fruit.h  HealItem.cpp  PU_Dash.cpp  PU_Dash.h  PU_Shield.h  PowerUp.cpp  PowerUp.h
void void void/entities/ghosts/: GhostBody.h  NormalGhost.cpp  NormalGhost.h
void void void/entities/snake/: Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h
